<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menuGroup"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menuMainActivity"
            android:icon="@drawable/baseline_sell_24"
            android:title="@string/menuMainActivity" />
        <item
            android:id="@+id/menuMyProfileActivity"
            android:icon="@drawable/baseline_manage_accounts_24"
            android:title="@string/menuMyProfileActivity" />
        <item
            android:id="@+id/menuNewProductActivity"
            android:icon="@drawable/baseline_add_24"
            android:title="@string/menuNewProductActivity" />
        <item
            android:id="@+id/menuManageProductActivity"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menuManageProductActivity" />
        <item
            android:id="@+id/menuFinancialReportActivity"
            android:icon="@drawable/baseline_monitoring_24"
            android:title="@string/menuFinancialReportActivity" />
        <item
            android:id="@+id/menuManageUserActivity"
            android:icon="@drawable/baseline_group_24"
            android:title="@string/menuManageUserActivity" />
    </group>

    <group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <item
            android:id="@+id/menuLogout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/menuLogout" />
    </group>
</menu>